--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.15",
     "@react-navigation/native-stack": "^7.3.22",
+    "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-gesture-handler": "^2.27.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1"
   },
