--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MyNewApp",
+  "name": "mynewapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,15 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-vector-icons/material-icons": "^12.3.0",
     "@react-native/new-app-screen": "0.80.1",
-    "@react-navigation/native": "^7.1.15",
+    "@react-navigation/drawer": "^7.5.7",
+    "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.22",
+    "@react-navigation/stack": "^7.4.7",
     "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "react-native-gesture-handler": "^2.27.2",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1"
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^4.0.2",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.14.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -33,6 +40,7 @@
     "@react-native/typescript-config": "0.80.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
